fix word wrapping

--- a/src/components/dpmsgMessageBubble.css
+++ b/src/components/dpmsgMessageBubble.css
@@ -52,7 +52,8 @@
   margin-bottom: var(--xxs-space);
   margin-top: var(--s-space);
   padding: var(--sm-space);
-  word-break: break-all;
+  word-break: break-word;
+  white-space: pre-wrap;
 
   &.dpmsg-SameSender {
     margin-bottom: var(--xxs-space);
